Right answer column added

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         </div>
 
         <div class="list-header">
-          <span>Source</span>
-          <span>Target</span>
+          <span>Word to translate</span>
+          <span>Your Answer</span>
+          <span>Right Answer</span>
         </div>
 
         <div class="vocab-list" id="vocabList" aria-live="polite"></div>
